architecture any->all fixed ignore for -hydro

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -1,4 +1,4 @@
-ihe-wallpapers/
-ihe-wallpapers.debhelper.log
-ihe-wallpapers.substvars
+ihe-wallpapers-hydro/
+ihe-wallpapers-hydro.debhelper.log
+ihe-wallpapers-hydro.substvars
 files
